[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-validator-agent"
version = "0.1.0"
description = "Agente MCP con Pydantic AI para validar instrucciones sobre la demo web."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "pydantic-ai>=0.0.8",
  "playwright>=1.44.0",
  "mcp>=0.1.0",
  "typer>=0.12.3"
]

[project.scripts]
ai-validator-agent = "ai_validator_agent.run:main"
